added footer, change price-box border

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,10 @@
 		<script src="main.js"></script>
 	</head>
 	<body>
-		<h1>Dnešní ceny:</h1>
+		<h1>Today's prices:</h1>
 		<div class="prices"></div>
+		<footer>
+			<p>© 2023 Tomáš Kelbasa</p>
+		</footer>
 	</body>
 </html>
