--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<h1>Today's prices:</h1>
-		<div class="prices"></div>
+		<div class="prices">Loading...</div>
 		<footer>
 			<p>© 2023 Tomáš Kelbasa</p>
 		</footer>
