--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
 		<meta
 			http-equiv="X-UA-Compatible"
 			content="IE=edge" />
+		<meta lang="en">
 		<title>Page Title</title>
 		<meta
 			name="viewport"
