--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta
-			http-equiv="X-UA-Compatible"
-			content="IE=edge" />
-		<meta lang="en">
-		<title>Page Title</title>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1" />
-		<link
-			rel="stylesheet"
-			href="main.css" />
-		<script src="main.js"></script>
-	</head>
-	<body>
-		<h1>Today's prices:</h1>
-		<div class="prices">Loading...</div>
-		<footer>
-			<p>© 2023 Tomáš Kelbasa</p>
-		</footer>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta lang="en" />
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <h1>Today's prices:</h1>
+    <div class="prices">Loading...</div>
+    <footer class="footer">
+      <p class="footer-cred">
+        <a href="https://github.com/TomasKelbasa" target="_blank"
+          >© 2023 Tomáš Kelbasa</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
