getting url from html not adress bar

--- a/popup.html
+++ b/popup.html
@@ -14,9 +14,9 @@
     <div class="prices">Loading...</div>
     <footer class="footer">
       <p class="footer-cred">
-        <a href="https://github.com/TomasKelbasa" target="_blank"
-          >© 2023 Tomáš Kelbasa</a
-        >
+        <a href="https://github.com/TomasKelbasa" target="_blank">
+          © 2023 Tomáš Kelbasa
+        </a>
       </p>
     </footer>
   </body>
