--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,6 @@
     <title>Rohlik prices</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="main.css" />
-    <script src="main.js"></script>
   </head>
   <body>
     <h1>Today's prices:</h1>
@@ -19,5 +18,6 @@
         </a>
       </p>
     </footer>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
